--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
 	"private": true,
 	"scripts": {},
 	"dependencies": {
-		"express": "^4.16.3"
+		"cheerio": "^1.0.0-rc.2",
+		"clean-css": "^4.1.11",
+		"cssurl": "^1.3.0",
+		"express": "^4.16.3",
+		"html-minifier": "^3.5.10",
+		"uglify-js": "^3.3.15"
 	},
 	"devDependencies": {}
 }
